--- a/database/package.json
+++ b/database/package.json
@@ -1,6 +1,8 @@
 {
   "type": "module",
   "dependencies": {
-    "bcryptjs": "^3.0.2"
+    "bcryptjs": "^3.0.2",
+    "express": "^4.21.2",
+    "mongoose": "^8.12.1"
   }
 }
